[package]
name = "lcdsmartie-rs"
description = "Small framework to enable writing plugins for LCDSmartie in Rust (even for old OSes)"
authors = ["Dusty <rust@chcl.se>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.64"
keywords = ["LCDSmartie"]
categories = ["api-bindings", "no-std", "os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []

[dependencies]
