[package]
name = "lcdsmartie-rs"
description = "Small framework to enable writing plugins for LCDSmartie in Rust (even for old OSes)"
authors = ["Dusty <rust@chcl.se>"]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.64"
keywords = ["LCDSmartie"]
categories = ["api-bindings", "no-std", "os::windows-apis"]
repository = "https://github.com/ChlorideCull/lcdsmartie-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []

[dependencies]

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
]